// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  className="ant-alert ant-alert-info"
  data-show={true}
>
  <span
    aria-label="info-circle"
    className="anticon anticon-info-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="info-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    <div
      style={
        Object {
          "height": "1.5175em",
        }
      }
    />
  </span>
  <span
    className="ant-alert-description"
  />
</div>
`;

exports[`Render properties.closable: true - value[0] 1`] = `
<div
  className="ant-alert ant-alert-info ant-alert-closable"
  data-show={true}
>
  <span
    aria-label="info-circle"
    className="anticon anticon-info-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="info-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Message closable true
  </span>
  <span
    className="ant-alert-description"
  />
  <button
    className="ant-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      aria-label="close"
      className="anticon anticon-close"
      role="img"
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="close"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render properties.closeText: Close Text - value[0] 1`] = `
<div
  className="ant-alert ant-alert-info ant-alert-closable"
  data-show={true}
>
  <span
    aria-label="info-circle"
    className="anticon anticon-info-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="info-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Message closable true
  </span>
  <span
    className="ant-alert-description"
  />
  <button
    className="ant-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="ant-alert-close-text"
    >
      Close Text
    </span>
  </button>
</div>
`;

exports[`Render properties.icon object - value[0] 1`] = `
<div
  className="ant-alert ant-alert-info"
  data-show={true}
>
  <span
    aria-label="loading-3-quarters"
    className="anticon anticon-loading-3-quarters ant-alert-icon"
    id="properties.icon object_icon"
    required={false}
    role="img"
  >
    <svg
      aria-hidden="true"
      className="anticon-spin"
      data-icon="loading-3-quarters"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Message with Icon!
  </span>
  <span
    className="ant-alert-description"
  />
</div>
`;

exports[`Render properties.icon string - value[0] 1`] = `
<div
  className="ant-alert ant-alert-info"
  data-show={true}
>
  <span
    aria-label="loading-3-quarters"
    className="anticon anticon-loading-3-quarters ant-alert-icon"
    id="properties.icon string_icon"
    required={false}
    role="img"
  >
    <svg
      aria-hidden="true"
      className="anticon-spin"
      data-icon="loading-3-quarters"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Message with Icon!
  </span>
  <span
    className="ant-alert-description"
  />
</div>
`;

exports[`Render properties.message - value[0] 1`] = `
<div
  className="ant-alert ant-alert-info"
  data-show={true}
>
  <span
    aria-label="info-circle"
    className="anticon anticon-info-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="info-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Alert message - Completed!
  </span>
  <span
    className="ant-alert-description"
  />
</div>
`;

exports[`Render properties.type: error - value[0] 1`] = `
<div
  className="ant-alert ant-alert-error"
  data-show={true}
>
  <span
    aria-label="close-circle"
    className="anticon anticon-close-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="close-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Alert message - error!
  </span>
  <span
    className="ant-alert-description"
  />
</div>
`;

exports[`Render properties.type: error banner: true - value[0] 1`] = `
<div
  className="ant-alert ant-alert-error ant-alert-banner"
  data-show={true}
>
  <span
    aria-label="close-circle"
    className="anticon anticon-close-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="close-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Alert message - error!
  </span>
  <span
    className="ant-alert-description"
  />
</div>
`;

exports[`Render properties.type: error showIcon: false - value[0] 1`] = `
<div
  className="ant-alert ant-alert-error ant-alert-no-icon"
  data-show={true}
>
  <span
    className="ant-alert-message"
  >
    Alert message - error!
  </span>
  <span
    className="ant-alert-description"
  />
</div>
`;

exports[`Render properties.type: info - value[0] 1`] = `
<div
  className="ant-alert ant-alert-info"
  data-show={true}
>
  <span
    aria-label="info-circle"
    className="anticon anticon-info-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="info-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Alert message - info!
  </span>
  <span
    className="ant-alert-description"
  />
</div>
`;

exports[`Render properties.type: info banner: true - value[0] 1`] = `
<div
  className="ant-alert ant-alert-info ant-alert-banner"
  data-show={true}
>
  <span
    aria-label="info-circle"
    className="anticon anticon-info-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="info-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Alert message - info!
  </span>
  <span
    className="ant-alert-description"
  />
</div>
`;

exports[`Render properties.type: info showIcon: false - value[0] 1`] = `
<div
  className="ant-alert ant-alert-info ant-alert-no-icon"
  data-show={true}
>
  <span
    className="ant-alert-message"
  >
    Alert message - info!
  </span>
  <span
    className="ant-alert-description"
  />
</div>
`;

exports[`Render properties.type: success - value[0] 1`] = `
<div
  className="ant-alert ant-alert-success"
  data-show={true}
>
  <span
    aria-label="check-circle"
    className="anticon anticon-check-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="check-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Alert message - success!
  </span>
  <span
    className="ant-alert-description"
  />
</div>
`;

exports[`Render properties.type: success banner: true - value[0] 1`] = `
<div
  className="ant-alert ant-alert-success ant-alert-banner"
  data-show={true}
>
  <span
    aria-label="check-circle"
    className="anticon anticon-check-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="check-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Alert message - success!
  </span>
  <span
    className="ant-alert-description"
  />
</div>
`;

exports[`Render properties.type: success showIcon: false - value[0] 1`] = `
<div
  className="ant-alert ant-alert-success ant-alert-no-icon"
  data-show={true}
>
  <span
    className="ant-alert-message"
  >
    Alert message - success!
  </span>
  <span
    className="ant-alert-description"
  />
</div>
`;

exports[`Render properties.type: warning - value[0] 1`] = `
<div
  className="ant-alert ant-alert-warning"
  data-show={true}
>
  <span
    aria-label="exclamation-circle"
    className="anticon anticon-exclamation-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="exclamation-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Alert message - warning!
  </span>
  <span
    className="ant-alert-description"
  />
</div>
`;

exports[`Render properties.type: warning banner: true - value[0] 1`] = `
<div
  className="ant-alert ant-alert-warning ant-alert-banner"
  data-show={true}
>
  <span
    aria-label="exclamation-circle"
    className="anticon anticon-exclamation-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="exclamation-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Alert message - warning!
  </span>
  <span
    className="ant-alert-description"
  />
</div>
`;

exports[`Render properties.type: warning showIcon: false - value[0] 1`] = `
<div
  className="ant-alert ant-alert-warning ant-alert-no-icon"
  data-show={true}
>
  <span
    className="ant-alert-message"
  >
    Alert message - warning!
  </span>
  <span
    className="ant-alert-description"
  />
</div>
`;

exports[`Render with description properties.closable: true - value[0] 1`] = `
<div
  className="ant-alert ant-alert-info ant-alert-with-description ant-alert-closable"
  data-show={true}
>
  <span
    aria-label="info-circle"
    className="anticon anticon-info-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="info-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
      <path
        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Message closable true
  </span>
  <span
    className="ant-alert-description"
  >
    This is a description for the block.
  </span>
  <button
    className="ant-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      aria-label="close"
      className="anticon anticon-close"
      role="img"
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="close"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render with description properties.closeText: Close Text - value[0] 1`] = `
<div
  className="ant-alert ant-alert-info ant-alert-with-description ant-alert-closable"
  data-show={true}
>
  <span
    aria-label="info-circle"
    className="anticon anticon-info-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="info-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
      <path
        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Message closable true
  </span>
  <span
    className="ant-alert-description"
  >
    This is a description for the block.
  </span>
  <button
    className="ant-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="ant-alert-close-text"
    >
      Close Text
    </span>
  </button>
</div>
`;

exports[`Render with description properties.icon object - value[0] 1`] = `
<div
  className="ant-alert ant-alert-info ant-alert-with-description"
  data-show={true}
>
  <span
    aria-label="loading-3-quarters"
    className="anticon anticon-loading-3-quarters ant-alert-icon"
    id="with description properties.icon object_icon"
    required={false}
    role="img"
  >
    <svg
      aria-hidden="true"
      className="anticon-spin"
      data-icon="loading-3-quarters"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Message with Icon!
  </span>
  <span
    className="ant-alert-description"
  >
    This is a description for the block.
  </span>
</div>
`;

exports[`Render with description properties.icon string - value[0] 1`] = `
<div
  className="ant-alert ant-alert-info ant-alert-with-description"
  data-show={true}
>
  <span
    aria-label="loading-3-quarters"
    className="anticon anticon-loading-3-quarters ant-alert-icon"
    id="with description properties.icon string_icon"
    required={false}
    role="img"
  >
    <svg
      aria-hidden="true"
      className="anticon-spin"
      data-icon="loading-3-quarters"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Message with Icon!
  </span>
  <span
    className="ant-alert-description"
  >
    This is a description for the block.
  </span>
</div>
`;

exports[`Render with description properties.message - value[0] 1`] = `
<div
  className="ant-alert ant-alert-info ant-alert-with-description"
  data-show={true}
>
  <span
    aria-label="info-circle"
    className="anticon anticon-info-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="info-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
      <path
        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Alert message - Completed!
  </span>
  <span
    className="ant-alert-description"
  >
    This is a description for the block.
  </span>
</div>
`;

exports[`Render with description properties.type: error - value[0] 1`] = `
<div
  className="ant-alert ant-alert-error ant-alert-with-description"
  data-show={true}
>
  <span
    aria-label="close-circle"
    className="anticon anticon-close-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="close-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M685.4 354.8c0-4.4-3.6-8-8-8l-66 .3L512 465.6l-99.3-118.4-66.1-.3c-4.4 0-8 3.5-8 8 0 1.9.7 3.7 1.9 5.2l130.1 155L340.5 670a8.32 8.32 0 00-1.9 5.2c0 4.4 3.6 8 8 8l66.1-.3L512 564.4l99.3 118.4 66 .3c4.4 0 8-3.5 8-8 0-1.9-.7-3.7-1.9-5.2L553.5 515l130.1-155c1.2-1.4 1.8-3.3 1.8-5.2z"
      />
      <path
        d="M512 65C264.6 65 64 265.6 64 513s200.6 448 448 448 448-200.6 448-448S759.4 65 512 65zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Alert message - error!
  </span>
  <span
    className="ant-alert-description"
  >
    This is a description for the block.
  </span>
</div>
`;

exports[`Render with description properties.type: error banner: true - value[0] 1`] = `
<div
  className="ant-alert ant-alert-error ant-alert-with-description ant-alert-banner"
  data-show={true}
>
  <span
    aria-label="close-circle"
    className="anticon anticon-close-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="close-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M685.4 354.8c0-4.4-3.6-8-8-8l-66 .3L512 465.6l-99.3-118.4-66.1-.3c-4.4 0-8 3.5-8 8 0 1.9.7 3.7 1.9 5.2l130.1 155L340.5 670a8.32 8.32 0 00-1.9 5.2c0 4.4 3.6 8 8 8l66.1-.3L512 564.4l99.3 118.4 66 .3c4.4 0 8-3.5 8-8 0-1.9-.7-3.7-1.9-5.2L553.5 515l130.1-155c1.2-1.4 1.8-3.3 1.8-5.2z"
      />
      <path
        d="M512 65C264.6 65 64 265.6 64 513s200.6 448 448 448 448-200.6 448-448S759.4 65 512 65zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Alert message - error!
  </span>
  <span
    className="ant-alert-description"
  >
    This is a description for the block.
  </span>
</div>
`;

exports[`Render with description properties.type: error showIcon: false - value[0] 1`] = `
<div
  className="ant-alert ant-alert-error ant-alert-with-description ant-alert-no-icon"
  data-show={true}
>
  <span
    className="ant-alert-message"
  >
    Alert message - error!
  </span>
  <span
    className="ant-alert-description"
  >
    This is a description for the block.
  </span>
</div>
`;

exports[`Render with description properties.type: info - value[0] 1`] = `
<div
  className="ant-alert ant-alert-info ant-alert-with-description"
  data-show={true}
>
  <span
    aria-label="info-circle"
    className="anticon anticon-info-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="info-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
      <path
        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Alert message - info!
  </span>
  <span
    className="ant-alert-description"
  >
    This is a description for the block.
  </span>
</div>
`;

exports[`Render with description properties.type: info banner: true - value[0] 1`] = `
<div
  className="ant-alert ant-alert-info ant-alert-with-description ant-alert-banner"
  data-show={true}
>
  <span
    aria-label="info-circle"
    className="anticon anticon-info-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="info-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
      <path
        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Alert message - info!
  </span>
  <span
    className="ant-alert-description"
  >
    This is a description for the block.
  </span>
</div>
`;

exports[`Render with description properties.type: info showIcon: false - value[0] 1`] = `
<div
  className="ant-alert ant-alert-info ant-alert-with-description ant-alert-no-icon"
  data-show={true}
>
  <span
    className="ant-alert-message"
  >
    Alert message - info!
  </span>
  <span
    className="ant-alert-description"
  >
    This is a description for the block.
  </span>
</div>
`;

exports[`Render with description properties.type: success - value[0] 1`] = `
<div
  className="ant-alert ant-alert-success ant-alert-with-description"
  data-show={true}
>
  <span
    aria-label="check-circle"
    className="anticon anticon-check-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="check-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
      />
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Alert message - success!
  </span>
  <span
    className="ant-alert-description"
  >
    This is a description for the block.
  </span>
</div>
`;

exports[`Render with description properties.type: success banner: true - value[0] 1`] = `
<div
  className="ant-alert ant-alert-success ant-alert-with-description ant-alert-banner"
  data-show={true}
>
  <span
    aria-label="check-circle"
    className="anticon anticon-check-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="check-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
      />
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Alert message - success!
  </span>
  <span
    className="ant-alert-description"
  >
    This is a description for the block.
  </span>
</div>
`;

exports[`Render with description properties.type: success showIcon: false - value[0] 1`] = `
<div
  className="ant-alert ant-alert-success ant-alert-with-description ant-alert-no-icon"
  data-show={true}
>
  <span
    className="ant-alert-message"
  >
    Alert message - success!
  </span>
  <span
    className="ant-alert-description"
  >
    This is a description for the block.
  </span>
</div>
`;

exports[`Render with description properties.type: warning - value[0] 1`] = `
<div
  className="ant-alert ant-alert-warning ant-alert-with-description"
  data-show={true}
>
  <span
    aria-label="exclamation-circle"
    className="anticon anticon-exclamation-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="exclamation-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
      <path
        d="M464 688a48 48 0 1096 0 48 48 0 10-96 0zm24-112h48c4.4 0 8-3.6 8-8V296c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Alert message - warning!
  </span>
  <span
    className="ant-alert-description"
  >
    This is a description for the block.
  </span>
</div>
`;

exports[`Render with description properties.type: warning banner: true - value[0] 1`] = `
<div
  className="ant-alert ant-alert-warning ant-alert-with-description ant-alert-banner"
  data-show={true}
>
  <span
    aria-label="exclamation-circle"
    className="anticon anticon-exclamation-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="exclamation-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
      <path
        d="M464 688a48 48 0 1096 0 48 48 0 10-96 0zm24-112h48c4.4 0 8-3.6 8-8V296c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8z"
      />
    </svg>
  </span>
  <span
    className="ant-alert-message"
  >
    Alert message - warning!
  </span>
  <span
    className="ant-alert-description"
  >
    This is a description for the block.
  </span>
</div>
`;

exports[`Render with description properties.type: warning showIcon: false - value[0] 1`] = `
<div
  className="ant-alert ant-alert-warning ant-alert-with-description ant-alert-no-icon"
  data-show={true}
>
  <span
    className="ant-alert-message"
  >
    Alert message - warning!
  </span>
  <span
    className="ant-alert-description"
  >
    This is a description for the block.
  </span>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.closable: true 1`] = `true`;

exports[`Test Schema properties.closable: true 2`] = `null`;

exports[`Test Schema properties.closeText: Close Text 1`] = `true`;

exports[`Test Schema properties.closeText: Close Text 2`] = `null`;

exports[`Test Schema properties.icon object 1`] = `true`;

exports[`Test Schema properties.icon object 2`] = `null`;

exports[`Test Schema properties.icon string 1`] = `true`;

exports[`Test Schema properties.icon string 2`] = `null`;

exports[`Test Schema properties.message 1`] = `true`;

exports[`Test Schema properties.message 2`] = `null`;

exports[`Test Schema properties.type: error 1`] = `true`;

exports[`Test Schema properties.type: error 2`] = `null`;

exports[`Test Schema properties.type: error banner: true 1`] = `true`;

exports[`Test Schema properties.type: error banner: true 2`] = `null`;

exports[`Test Schema properties.type: error showIcon: false 1`] = `true`;

exports[`Test Schema properties.type: error showIcon: false 2`] = `null`;

exports[`Test Schema properties.type: info 1`] = `true`;

exports[`Test Schema properties.type: info 2`] = `null`;

exports[`Test Schema properties.type: info banner: true 1`] = `true`;

exports[`Test Schema properties.type: info banner: true 2`] = `null`;

exports[`Test Schema properties.type: info showIcon: false 1`] = `true`;

exports[`Test Schema properties.type: info showIcon: false 2`] = `null`;

exports[`Test Schema properties.type: success 1`] = `true`;

exports[`Test Schema properties.type: success 2`] = `null`;

exports[`Test Schema properties.type: success banner: true 1`] = `true`;

exports[`Test Schema properties.type: success banner: true 2`] = `null`;

exports[`Test Schema properties.type: success showIcon: false 1`] = `true`;

exports[`Test Schema properties.type: success showIcon: false 2`] = `null`;

exports[`Test Schema properties.type: warning 1`] = `true`;

exports[`Test Schema properties.type: warning 2`] = `null`;

exports[`Test Schema properties.type: warning banner: true 1`] = `true`;

exports[`Test Schema properties.type: warning banner: true 2`] = `null`;

exports[`Test Schema properties.type: warning showIcon: false 1`] = `true`;

exports[`Test Schema properties.type: warning showIcon: false 2`] = `null`;

exports[`Test Schema with description properties.closable: true 1`] = `true`;

exports[`Test Schema with description properties.closable: true 2`] = `null`;

exports[`Test Schema with description properties.closeText: Close Text 1`] = `true`;

exports[`Test Schema with description properties.closeText: Close Text 2`] = `null`;

exports[`Test Schema with description properties.icon object 1`] = `true`;

exports[`Test Schema with description properties.icon object 2`] = `null`;

exports[`Test Schema with description properties.icon string 1`] = `true`;

exports[`Test Schema with description properties.icon string 2`] = `null`;

exports[`Test Schema with description properties.message 1`] = `true`;

exports[`Test Schema with description properties.message 2`] = `null`;

exports[`Test Schema with description properties.type: error 1`] = `true`;

exports[`Test Schema with description properties.type: error 2`] = `null`;

exports[`Test Schema with description properties.type: error banner: true 1`] = `true`;

exports[`Test Schema with description properties.type: error banner: true 2`] = `null`;

exports[`Test Schema with description properties.type: error showIcon: false 1`] = `true`;

exports[`Test Schema with description properties.type: error showIcon: false 2`] = `null`;

exports[`Test Schema with description properties.type: info 1`] = `true`;

exports[`Test Schema with description properties.type: info 2`] = `null`;

exports[`Test Schema with description properties.type: info banner: true 1`] = `true`;

exports[`Test Schema with description properties.type: info banner: true 2`] = `null`;

exports[`Test Schema with description properties.type: info showIcon: false 1`] = `true`;

exports[`Test Schema with description properties.type: info showIcon: false 2`] = `null`;

exports[`Test Schema with description properties.type: success 1`] = `true`;

exports[`Test Schema with description properties.type: success 2`] = `null`;

exports[`Test Schema with description properties.type: success banner: true 1`] = `true`;

exports[`Test Schema with description properties.type: success banner: true 2`] = `null`;

exports[`Test Schema with description properties.type: success showIcon: false 1`] = `true`;

exports[`Test Schema with description properties.type: success showIcon: false 2`] = `null`;

exports[`Test Schema with description properties.type: warning 1`] = `true`;

exports[`Test Schema with description properties.type: warning 2`] = `null`;

exports[`Test Schema with description properties.type: warning banner: true 1`] = `true`;

exports[`Test Schema with description properties.type: warning banner: true 2`] = `null`;

exports[`Test Schema with description properties.type: warning showIcon: false 1`] = `true`;

exports[`Test Schema with description properties.type: warning showIcon: false 2`] = `null`;
